Sun Jan  9 23:34:50 CET 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/test-other.sh: add --help option

Sat Jan  8 02:36:23 CET 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: small optimization for darwin os

Sat Jan  8 02:19:38 CET 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c src/tds/token.c:
	- fix unique inside variant

Mon Jan  3 15:25:36 EST 2011	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c 
	- TDSPORT and TDSVER override even if no configuration file found

Fri Dec 31 11:33:05 EST 2010	JK Lowden <jklowden@freetds.org>
	* doc/api_status.txt doc/htdoc/faq.html
	- updated per Frediano and corrected validation errors

Thu Dec 30 23:06:08 EST 2010	JK Lowden <jklowden@freetds.org>
	* doc/tsql.txt doc/userguide.sgml doc/htdoc/faq.html
	- updated to reflect current status

Thu Dec 30 20:50:14 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c: add some numeric cases

Thu Dec 30 19:53:59 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/dblib/dblib.c src/dblib/unittests/t0007.c:
	* src/dblib/unittests/t0007.sql:
	- fix VARYBINBIND in dblib

Thu Dec 30 19:28:16 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/sql2tds.c src/tds/threadsafe.c:
	- fix time shift problem

Thu Dec 30 19:18:05 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/test64.c:
	- add small test for 64bit problems

Thu Dec 30 19:10:58 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c src/dblib/unittests/t0013.c:
	* src/dblib/unittests/t0014.c:
	- improve dbmoretext tests

Thu Dec 30 15:53:06 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sybdb.h src/dblib/unittests/t0007.c:
	- correct t0007 test (still broken), fix DBVARYCHAR declaration

Thu Dec 30 14:06:25 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>