@@ -1,3 +1,6 @@
+Wed Jan 12 10:21:03 CET 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/query.c: support SQL_VARIANT passing parameters
+
 Sun Jan  9 23:34:50 CET 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* misc/test-other.sh: add --help option
 
@@ -3136,4 +3139,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3190 2011/01/09 22:34:57 freddy77 Exp $
+$Id: ChangeLog,v 1.3191 2011/01/12 09:21:11 freddy77 Exp $
